simulate CRUD operations for task management

--- a/task-manager/backend/tsconfig.json
+++ b/task-manager/backend/tsconfig.json
@@ -6,8 +6,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
+    "target": "ES6",
     "sourceMap": true,
+    "strict": true,
+    "moduleResolution": "node",
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
